# CC_AF

./: CMakeLists.txt  README.md  package.xml
config/: parameters.yaml  parameters_probabilistic.yaml
docs/: output.avi  probabilistic_tracking_result_video_slower.avi
include/: PolynomialRegression.hpp  condensation.hpp  probabilistic_tracking_node.hpp  sliding_window_node.hpp
launch/: probabilistic_tracking.launch.py  sliding_window.launch.py  visual_computing.launch.py  visual_computing_backup.launch.py
src/: condensation.cpp  probabilistic_tracking.cpp  probabilistic_tracking_node.cpp  sliding_window.cpp  sliding_window_node.cpp
